Fix z-index on header to priorize header over sidebar

--- a/app/ui/src/Components/SiteBar/SiteBar.module.scss
+++ b/app/ui/src/Components/SiteBar/SiteBar.module.scss
@@ -8,7 +8,7 @@
   background-color: palette(base, 900);
   white-space: nowrap;
 
-  z-index: 3;
+  z-index: 4;
 }
 
 .left,
